<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/remove_from_saved_news"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/cancel_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/remove_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/remove"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>

</LinearLayout>